--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -36,13 +36,12 @@ workflows:
             -exportArchive \
             -archivePath build/PueblosBonitosApp.xcarchive \
             -exportOptionsPlist ios/exportOptions.plist \
-            -exportPath build
+            -exportPath build/ipa
 
     artifacts:
-      - build/*.ipa
+      - build/ipa/*.ipa
 
     publishing:
       app_store_connect:
         apple_id: $APPLE_ID
         password: $APP_SPECIFIC_PASSWORD
-        ipa_path: "build/PueblosBonitosApp.ipa"
