--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "expo-web-browser": "^15.0.9",
     "hono": "^4.10.3",
     "jwt-decode": "^4.0.0",
-    "lucide-react-native": "^0.475.0",
+    "lucide-react": "^0.475.0",
     "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-dom": "19.1.0",
