--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "EXPO_ROUTER_APP_ROOT=app expo start -c",
     "start-web": "bunx rork start -p 1ff361y9lgfnohgh4dp97 --web --tunnel",
     "start-web-dev": "DEBUG=expo* bunx rork start -p 1ff361y9lgfnohgh4dp97 --web --tunnel",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@ai-sdk/react": "^2.0.89",
@@ -49,6 +51,7 @@
     "hono": "^4.10.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
+    "lucide-react-native": "^0.553.0",
     "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-dom": "19.1.0",
