--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-crypto": "~15.0.7",
     "expo-device": "~8.0.9",
     "expo-font": "~14.0.9",
+    "expo-google-sign-in": "^10.2.0",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-image-picker": "~17.0.8",
