Añadidos módulos nativos GoogleSignIn + actualización Podfile

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -23,6 +23,9 @@ prepare_react_native_project!
 target 'PueblosBonitosApp' do
   use_expo_modules!
 
+  # ⭐⭐⭐ AÑADIMOS GOOGLE SIGN-IN NATIVO (ÚNICA LÍNEA NECESARIA)
+  pod 'GoogleSignIn'
+
   if ENV['EXPO_USE_COMMUNITY_AUTOLINKING'] == '1'
     config_command = ['node', '-e', "process.argv=['', '', 'config'];require('@react-native-community/cli').run()"];
   else
