--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,3 @@
-
 require File.join(File.dirname(`node --print "require.resolve('expo/package.json')"`), "scripts/autolinking")
 require File.join(File.dirname(`node --print "require.resolve('react-native/package.json')"`), "scripts/react_native_pods")
 
@@ -22,20 +21,15 @@ prepare_react_native_project!
 target 'PueblosBonitosApp' do
   use_expo_modules!
 
-  # ⭐⭐⭐ GOOGLE SIGN-IN NATIVO COMPLETO
-  pod 'GoogleSignIn', '~> 7.0.0'
-  pod 'GoogleSignInSwiftSupport'
+  # ⭐⭐⭐ GOOGLE SIGN-IN NATIVO (VERSIÓN CORRECTA PARA SDK 51)
+  pod 'GoogleSignIn', '~> 6.2.4'
 
   if ENV['EXPO_USE_COMMUNITY_AUTOLINKING'] == '1'
     config_command = ['node', '-e', "process.argv=['', '', 'config'];require('@react-native-community/cli').run()"]
   else
     config_command = [
-      'npx',
-      'expo-modules-autolinking',
-      'react-native-config',
-      '--json',
-      '--platform',
-      'ios'
+      'npx', 'expo-modules-autolinking', 'react-native-config',
+      '--json', '--platform', 'ios'
     ]
   end
 
