--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "Pueblos Bonitos App",
     "slug": "pueblos-bonitos-app",
+    "owner": "franmestre",
     "version": "2.0.1",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
