--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -63,3 +63,16 @@ expo.useLegacyPackaging=false
 # Specifies whether the app is configured to use edge-to-edge via the app config or plugin
 # WARNING: This property has been deprecated and will be removed in Expo SDK 55. Use `edgeToEdgeEnabled` or `react.edgeToEdgeEnabled` to determine whether the project is using edge-to-edge.
 expo.edgeToEdgeEnabled=true
+
+# Ruta explícita a Node para las builds de Android
+NODE_BINARY=/opt/homebrew/opt/node@20/bin/node
+
+# --- Configuración de firma para la keystore de subida LPBE ---
+
+# Ruta de la keystore **relativa** a android/app.
+# Si guardaste LPBE-upload-key.jks en la raíz del proyecto lpbe,
+# desde android/app la ruta es "../LPBE-upload-key.jks"
+MYAPP_UPLOAD_STORE_FILE=/Users/franmestre/Projects/lpbe/LPBE-upload-key.jks
+MYAPP_UPLOAD_KEY_ALIAS=lpbeuploadkey
+MYAPP_UPLOAD_STORE_PASSWORD=Shinygiant476
+MYAPP_UPLOAD_KEY_PASSWORD=Shinygiant476
